--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,6 +2,7 @@
 
 <ul>
   <% @tags.each do |tag| %>
-    <li><%= link_to tag.name, tag_path(tag) %></li>
+    <li><%= link_to tag.name, tag_path(tag) %>
+   <span><%= link_to "Delete", tag_path(tag), method: :delete %></span> </li>
   <% end %>
 </ul>
